2002-05-23  Dan Winship  <danw@ximian.com>

	* src/libsoup/Makefile.am (libsoupinclude_HEADERS): install
	soup-ntlm.h

	* src/libsoup/soup-ntlm.c (soup_ntlm_parse_challenge): Separated
	out of soup_ntlm_response. Takes the challenge and returns the
	nonce and default domain from it. (The application can use this
	from a 401 handler to find the domain name when using NTLM auth.)
	(soup_ntlm_response): Remove the challenge-parsing code from here.
	Just take the nonce instead.

	* src/libsoup/soup-auth.c (ntlm_init): Update for soup-ntlm
	changes. Don't parse the authmech twice since there's no reason
	to.

2002-05-06  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-headers.c (soup_headers_parse_request):
	sizeof() on a static string includes the terminating nul, whereas
	the length being passed in from the GString doesn't, so subtract
	one from the sizeof().  Fixes a problem on the server when a valid
	request was made, but there weren't any headers.

	* src/libsoup/soup-server.c (issue_bad_request): Set a 400 Bad
	Request error code on the message and write the response to the
	requesting client.
	(read_headers_cb): In THROW_MALFORMED_HEADER, call
	issue_bad_request() and return SOUP_TRANSFER_CONTINUE instead of
	END so the message can be processed and cleaned up.
	(write_header, get_response_header, set_response_error): Move
	these up in the file so issue_bad_request() can use them.

2002-05-06  Dan Winship  <danw@ximian.com>

	* configure.in (SOUP_REVISION): Bump to 0.7.3

2002-05-03  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-context.c (soup_context_uri_hash,
	soup_context_uri_equal): NULL and "" are different. (23555)

2002-05-03  Joe Shaw  <joe@ximian.com>

	* src/*.[ch]: Prefix the libxml includes with the libxml/ path.

2002-04-30  Alex Graveley  <alex@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_get_iochannel):
	Loop on SSL_connect until it either returns error or success,
	blocking on need-read/need-write if necessary.
