@@ -66,17 +66,35 @@ AM_PROG_LIBTOOL
 # This isn't a program, but it doesn't fit anywhere else...
 AC_FUNC_ALLOCA
 
+dnl ***********************
+dnl *** Checks for glib ***
+dnl ***********************
 
-dnl ***************************
-dnl *** Checks for glib 1.2 ***
-dnl ***************************
+AC_MSG_CHECKING(whether to build against glib 2.0)
+AC_ARG_ENABLE(glib2, [\
+  --enable-glib2  Build Soup against glib 2.0], ,
+enable_glib2=no)
+AC_MSG_RESULT($enable_glib2)
 
-AM_PATH_GLIB(1.2.0,,
-             AC_MSG_ERROR([Cannot find GLIB: Is glib-config in path?]))
-
-GLIB_CFLAGS=`glib-config --cflags glib`
-GLIB_LIBS=`glib-config --libs glib`
-GMODULE_LIBS=`glib-config --libs gmodule`
+if test x"$enable_glib2" != xno; then
+	AM_PATH_GLIB_2_0(2.0.0,, AC_MSG_ERROR([Cannot find glib 2.0]))
+	GLIB_CFLAGS=`$PKG_CONFIG --cflags glib-2.0`
+	GLIB_LIBS=`$PKG_CONFIG --libs glib-2.0`
+	GMODULE_LIBS=`$PKG_CONFIG --libs gmodule-2.0`
+	FAVOUR_LIBXML=2
+	SOUP_PKGCONFIG_REQUIRES="glib-2.0"
+	AC_SUBST(SOUP_PKGCONFIG_REQUIRES)
+	AC_DEFINE(SOUP_GLIB2)
+else
+	AM_PATH_GLIB(1.2.0,,
+		AC_MSG_ERROR([Cannot find GLIB: Is glib-config in path?]))
+	GLIB_CFLAGS=`glib-config --cflags glib`
+	GLIB_LIBS=`glib-config --libs glib`
+	GMODULE_LIBS=`glib-config --libs gmodule`
+	FAVOUR_LIBXML=1
+	SOUP_PKGCONFIG_REQUIRES="glib"
+	AC_SUBST(SOUP_PKGCONFIG_REQUIRES)
+fi
 
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
@@ -87,7 +105,6 @@ dnl ****************************
 dnl *** Checks for gnome-xml ***
 dnl ****************************
 
-FAVOUR_LIBXML=1
 AC_ARG_WITH(libxml,
 	[  --with-libxml=[1/2] which version of libxml to use [default=$FAVOUR_LIBXML]],,
 	with_libxml=$FAVOUR_LIBXML)
@@ -567,6 +584,8 @@ Configuration:
   Source code location:		${srcdir}
   Compiler:			${CC}
   Build flags:			${CFLAGS} ${SOUP_DEBUG_FLAGS}
+
+  glib 2.0:                     ${enable_glib2}
 
   OpenSSL support:		${enable_openssl}
   Mozilla NSS support:		${enable_nss}
